# arcanoid

./: .gitignore  CMakeLists.txt
docs/: .doxyfile  CMakeLists.txt  arcnaoid.md  conf.py  entities.drawio  index.rst
docs/doxygen/: Doxyfile
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  qtquickcontrols2.conf  resources.qrc
src/domain/entities/: i_sprite.hpp  i_sprite_decorator.hpp  sprite.hpp
src/domain/entities/ball/: ball.cpp  ball.hpp  qball.cpp  qball.hpp
src/domain/entities/block/: block.cpp  block.hpp  qblock.cpp  qblock.hpp
src/domain/entities/board/: board.cpp  board.hpp  qboard.cpp  qboard.hpp
src/domain/events/: events.hpp  events_manager.hpp
src/domain/game/: game.cpp  game.hpp  i_game.hpp  i_game_decorator.hpp  qgame.cpp  qgame.hpp
src/logic_wraper/: event.hpp  logic_wrapper.hpp
src/logic_wrapper/logic_wrappers/: game_logic_wrapper.cpp  game_logic_wrapper.hpp
src/middleware/: logic_wrapper.hpp
src/middleware/communication/: events.hpp
src/middleware/view_objects/: i_view_object.hpp  q_view_object.cpp  q_view_object.hpp
src/middleware/view_objects_generalizers/: i_view_object_generalized.hpp  q_view_object_generalized.cpp  q_view_object_generalized.hpp
src/qml/: Main.qml
src/qml/game/: Game.qml
src/qml/game_menu/: GameMenu.qml
src/qml/routing/: Routing.js
src/utils/: downcaster.hpp  vector_subtype_converter.hpp
